syntax = "proto3";

package protos.api;

message Void {}

message SessionInfo {
  uint32 segments = 1;
  bytes journal = 2;
  ExitCode exit_code = 3;
}

message SegmentInfo {
  uint32 index = 1;
  uint32 po2 = 2;
  uint32 insn_cycles = 3;
  Asset segment = 4;
}

message ExitCode {
  oneof kind {
    uint32 halted = 1;
    uint32 paused = 2;
    Void system_split = 3;
    Void session_limit = 4;
  }
}

message Asset {
  oneof kind {
    bytes inline = 1;
    string path = 2;
  }
}

message AssetRequest {
  enum Kind {
    UNSPECIFIED = 0;
    INLINE = 1;
    PATH = 2;
  }

  Kind kind = 1;
}

message ExecuteRequest {
  Binary binary = 1;
  AssetRequest segments = 2;
  map<string, string> env_vars = 3;
  repeated string slice_ios = 4;
  repeated uint32 read_fds = 5;
  repeated uint32 write_fds = 6;
}

message ServerExecuteRequest {
  ExecuteRequest execute = 1;
}

message ServerProveRequest {
  ExecuteRequest execute = 1;
  ProverOpts opts = 2;
  AssetRequest receipt = 3;
}

message Binary {
  enum BinaryType {
    UNSPECIFIED = 0;
    IMAGE = 1;
    ELF = 2;
  }

  BinaryType kind = 1;
  Asset asset = 2;
}

message ProverOpts {}

message ServerRequest {
  oneof kind {
    ServerExecuteRequest execute = 1;
    ServerProveRequest prove = 2;
  }
}

message HelloRequest {
  uint32 version = 1;
}

message HelloReply {
  oneof kind {
    uint32 version = 1;
    GenericError error = 2;
  }
}

message ClientRequest {
  oneof kind {
    GenericError error = 1;
    ClientIoRequest io = 2;
    ClientSegmentDoneRequest segment_done = 3;
    ClientSessionDoneRequest session_done = 4;
  }
}

message ClientIoRequest {
  oneof kind {
    PosixIo posix = 1;
    SliceIo slice = 2;
    TraceEvent trace = 3;
  }
}

message ClientIoReply {
  oneof kind {
    bytes ok = 1;
    GenericError error = 2;
  }
}

message GenericReply {
  oneof kind {
    Void ok = 1;
    GenericError error = 2;
  }
}

message PosixIo {
  uint32 fd = 1;
  PosixCmd cmd = 2;
}

message PosixCmd {
  oneof kind {
    uint32 read = 1;
    bytes write = 2;
  }
}

message SliceIo {
  string name = 1;
  bytes from_guest = 2;
}

message ClientSegmentDoneRequest {
  SegmentInfo segment = 1;
}

message ClientSessionDoneRequest {
  SessionInfo session = 1;
}

message GenericError {
  string reason = 1;
}

message TraceEvent {}

service Server {
  rpc hello(HelloRequest) returns (HelloReply);
  rpc execute(ServerExecuteRequest) returns (stream ClientRequest);
}

service Client {
  rpc io(ClientIoRequest) returns (ClientIoReply);
  rpc segment_done(ClientSegmentDoneRequest) returns (GenericReply);
  rpc session_done(ClientSessionDoneRequest) returns (GenericReply);
}

service Parent {
  rpc channel(stream ClientRequest) returns (stream ServerRequest);
}
