syntax = "proto3";

import "base.proto";

package protos.core;

message MemoryImage {
  protos.base.CompatVersion version = 1;
  PageTableInfo info = 2;
  uint32 pc = 3;
  repeated PageEntry pages = 4;
}

message PageEntry {
  uint32 addr = 1;
  bytes data = 2;
}

message PageTableInfo {
  uint32 page_size = 1;
  uint32 page_table_addr = 2;
}

message Receipt {
  protos.base.CompatVersion version = 1;
  InnerReceipt inner = 2;
  bytes journal = 3;
}

message InnerReceipt {
  oneof kind {
    CompositeReceipt composite = 1;
    SuccinctReceipt succinct = 2;
    FakeReceipt fake = 3;
    Groth16Receipt groth16 = 4;
  }
}

message CompositeReceipt {
  repeated SegmentReceipt segments = 1;
  repeated InnerReceipt assumptions = 2;
  protos.base.Digest journal_digest = 3;
}

message SegmentReceipt {
  protos.base.CompatVersion version = 1;
  bytes seal = 2;
  uint32 index = 3;
  string hashfn = 4;
  protos.base.ReceiptClaim claim = 5;
}

message SuccinctReceipt {
  protos.base.CompatVersion version = 1;
  bytes seal = 2;
  protos.base.Digest control_id = 3;
  protos.base.ReceiptClaim claim = 4;
}

message Groth16Receipt {
  protos.base.CompatVersion version = 1;
  bytes seal = 2;
}

message FakeReceipt {
  protos.base.ReceiptClaim claim = 1;
}

